5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4379/executions/1811_2564.log
== TEST (2019-06-11 18:10:44) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("digite o vetor :")))
gols_sofridos=array(evel(input("digite o vetor :")))
resultado= gols-gols2
i=0
v=0
e=0
d=0
while(i<size(gols_feitos)):
	if(resultado[i] == 0):
		e=e+1
	elif(resultado[i]>0):
		v=v+1
	else:
		d=d+1
z=zeros(3,dtype=int)
z[0]=v
z[1]=e
z[2]=d
print(z)
	
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:11:08) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("digite o vetor :")))
gols_sofridos=array(eval(input("digite o vetor :")))
resultado= gols-gols2
i=0
v=0
e=0
d=0
while(i<size(gols_feitos)):
	if(resultado[i] == 0):
		e=e+1
	elif(resultado[i]>0):
		v=v+1
	else:
		d=d+1
z=zeros(3,dtype=int)
z[0]=v
z[1]=e
z[2]=d
print(z)
	
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:12:19) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("digite o vetor :")))
gols_sofridos=array(eval(input("digite o vetor :")))
resultado= gols_feitos-gols_sofridos
i=0
v=0
e=0
d=0
while(i<size(gols_feitos)):
	if(resultado[i] == 0):
		e=e+1
	elif(resultado[i]>0):
		v=v+1
	else:
		d=d+1
z=zeros(3,dtype=int)
z[0]=v
z[1]=e
z[2]=d
print(z)
	
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:12:47) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("digite o vetor :")))
gols_sofridos=array(eval(input("digite o vetor :")))
resultado= gols_feitos-gols_sofridos
i=0
v=0
e=0
d=0
while(i<size(gols_feitos)):
	if(resultado[i] == 0):
		e=e+1
	elif(resultado[i]>0):
		v=v+1
	else:
		d=d+1
z=zeros(3,dtype=int)
z[0]=v
z[1]=e
z[2]=d
print(z)
	
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:13:27) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("digite o vetor :")))
gols_sofridos=array(eval(input("digite o vetor :")))
resultado= gols_feitos-gols_sofridos
i=0
v=0
e=0
d=0
while(i<size(gols_feitos)):
	if(resultado[i] == 0):
		e=e+1
	elif(resultado[i]>0):
		v=v+1
	else:
		d=d+1
z=zeros(3,dtype=int)
z[0]=v
z[1]=e
z[2]=d
print(z)
	
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:15:39) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("digite o vetor :")))
gols_sofridos=array(eval(input("digite o vetor :")))
resultado= gols_feitos-gols_sofridos
i=0
v=0
e=0
d=0
while(i<size(gols_feitos)):
	if(resultado[i] == 0):
		e = e + 1
	elif(resultado[i]>0):
		v = v + 1
	else:
		d = d + 1
z=zeros(3,dtype = int)
z[0] = v
z[1] = e
z[2] = d
print(z)
	
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:17:04) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("digite o vetor: ")))
gols_sofridos=array(eval(input("digite o vetor: ")))
resultado= gols_feitos-gols_sofridos
i=0
v=0
e=0
d=0
while(i<size(gols_feitos)):
	if(resultado[i] == 0):
		e = e + 1
	elif(resultado[i]>0):
		v = v + 1
	else:
		d = d + 1
z = zeros(3,dtype = int)
z[0] = v
z[1] = e
z[2] = d
print(z)
	
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 18:21:34) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("digite o vetor :")))
gols_sofridos=array(eval(input("digite o vetor :")))
resultado= gols_feitos-gols_sofridos
i=0
v=0
e=0
d=0
while(i<size(gols_feitos)):
	if(resultado[i] == 0):
		e=e+1
	elif(resultado[i]>0):
		v=v+1
	else:
		d=d+1
z=zeros(3,dtype=int)
z[0]=v
z[1]=e
z[2]=d
print(z)
	
		
	
-- EXECUTION TIME:
507.884
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:

-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 18:21:34) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("digite o vetor :")))
gols_sofridos=array(eval(input("digite o vetor :")))
resultado= gols_feitos-gols_sofridos
i=0
v=0
e=0
d=0
while(i<size(gols_feitos)):
	if(resultado[i] == 0):
		e=e+1
	elif(resultado[i]>0):
		v=v+1
	else:
		d=d+1
z=zeros(3,dtype=int)
z[0]=v
z[1]=e
z[2]=d
print(z)
	
		
	
-- EXECUTION TIME:
464.963
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:

-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 18:21:34) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("digite o vetor: ")))
gols_sofridos=array(eval(input("digite o vetor: ")))
resultado= gols_feitos-gols_sofridos
i=0
v=0
e=0
d=0
while(i<size(gols_feitos)):
	if(resultado[i] == 0):
		e = e + 1
	elif(resultado[i]>0):
		v = v + 1
	else:
		d = d + 1
z = zeros(3,dtype = int)
z[0] = v
z[1] = e
z[2] = d
print(z)
	
		
	
-- EXECUTION TIME:
106.846
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:

-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:

-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 18:22:45) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("digite o vetor: ")))
gols_sofridos=array(eval(input("digite o vetor: ")))
resultado= gols_feitos-gols_sofridos
i=0
v=0
e=0
d=0
while(i<size(gols_feitos)):
	if(resultado[i] == 0):
		e = e + 1
	elif(resultado[i]>0):
		v = v + 1
	else:
		d = d + 1
z = zeros(3,dtype = int)
z[0] = v
z[1] = e
z[2] = d
print(z)
	
		
	
-- EXECUTION TIME:
107.913
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:

-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:

-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:24:08) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("digite o vetor: ")))
gols_sofridos=array(eval(input("digite o vetor: ")))
resultado= gols_feitos-gols_sofridos
i=0
v=0
e=0
d=0
for l in resultado:
z = zeros(3,dtype = int)
z[0] = v
z[1] = e
z[2] = d
print(z)
	
		
	
-- ERROR:
File "XXXX", line 10
    z = zeros(3,dtype = int)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:26:55) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("digite o vetor: ")))
gols_sofridos=array(eval(input("digite o vetor: ")))
resultado= gols_feitos-gols_sofridos
i=0
v=0
e=0
d=0
for l in resultado:
	if(i==0):
		e=e+1
	elif(i>0):
		v=v+1
	else:
		d=d+1
z = zeros(3,dtype = int)
z[0] = v
z[1] = e
z[2] = d
print(z)
	
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 18:27:51) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("digite o vetor: ")))
gols_sofridos=array(eval(input("digite o vetor: ")))
resultado= gols_feitos-gols_sofridos
i=0
v=0
e=0
d=0
for l in resultado:
	if(l==0):
		e=e+1
	elif(l>0):
		v=v+1
	else:
		d=d+1
z = zeros(3,dtype = int)
z[0] = v
z[1] = e
z[2] = d
print(z)
	
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 18:27:58) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("digite o vetor: ")))
gols_sofridos=array(eval(input("digite o vetor: ")))
resultado= gols_feitos-gols_sofridos
i=0
v=0
e=0
d=0
for l in resultado:
	if(l==0):
		e=e+1
	elif(l>0):
		v=v+1
	else:
		d=d+1
z = zeros(3,dtype = int)
z[0] = v
z[1] = e
z[2] = d
print(z)
	
		
	
-- EXECUTION TIME:
1.20017
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
